[gd_scene load_steps=6 format=3 uid="uid://dfu6vdkfj2okp"]

[ext_resource type="Script" uid="uid://bmylp1eh0eb4v" path="res://scripts/HUD/card_hud_display.gd" id="1_5brif"]
[ext_resource type="PackedScene" uid="uid://bd48cv83wcg06" path="res://prefabs/cards/card.tscn" id="2_w8vnt"]
[ext_resource type="AudioStream" uid="uid://k6g6tr4pqxmh" path="res://audio/sfx/fail_mission.wav" id="3_oqshx"]
[ext_resource type="AudioStream" uid="uid://cma8j7ln5ywk5" path="res://audio/sfx/complete_mission.wav" id="4_woqky"]
[ext_resource type="AudioStream" uid="uid://c6c7yjpt6vgac" path="res://audio/sfx/card_draw.wav" id="5_8h4kd"]

[node name="CardHUDDisplay" type="Node2D"]
script = ExtResource("1_5brif")

[node name="next" parent="." instance=ExtResource("2_w8vnt")]
unique_name_in_owner = true
z_index = 23
hide_effect = true

[node name="current" parent="." instance=ExtResource("2_w8vnt")]
unique_name_in_owner = true
z_index = 25
position = Vector2(128, 0)

[node name="cover" parent="." instance=ExtResource("2_w8vnt")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
z_index = 30
face_down = true
hide_effect = true

[node name="deck" parent="." instance=ExtResource("2_w8vnt")]
z_index = 20
face_down = true
hide_effect = true

[node name="TaskFailedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oqshx")
bus = &"Sfx"

[node name="TaskCompletedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_woqky")
bus = &"Sfx"

[node name="CardDrawSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8h4kd")
bus = &"Sfx"
